kubernetes/https-ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
    - host: example.com
      http:
        paths:
        - backend:
            serviceName: nginx
            servicePort: 80
